fixed the quantity problem, but it stills having the problem of same logic in two different components, I must creat a component to enhance the logic behind increment and decrement items

--- a/vite-project/components/Category/styles.css
+++ b/vite-project/components/Category/styles.css
@@ -90,7 +90,7 @@
     }
 
     .carousel-slides > div {
-        min-width: 90%;
+        min-width: 70%;
         max-width: 200px;
         min-height: 100%;
         max-height: 350px;
